--- a/src/app/components/current-account/current-account.component.html
+++ b/src/app/components/current-account/current-account.component.html
@@ -61,13 +61,13 @@
 
                             <button *ngIf="currentAccountAdd" type="button" class="btn btn-lg bg-gradient-success mx-2"
                                 style=" float: right;" data-bs-toggle="modal"
-                                data-bs-target="#addFromExcelCurrencyAccountModal">
+                                data-bs-target="#addFromExcelCurrentAccountModal">
                                 <i class="fa-solid fa-file-excel" style="font-size: 15px; margin-right: 5px;"></i>
                                 Cari Ekle (Excel)
                             </button>
 
                             <button *ngIf="currentAccountAdd" type="button" class="btn btn-lg bg-gradient-info mx-2"
-                                style=" float: right;" data-bs-toggle="modal" data-bs-target="#addCurrencyAccountModal">
+                                style=" float: right;" data-bs-toggle="modal" data-bs-target="#addCurrentAccountModal">
                                 <i class="fa-solid fa-user-plus" style="font-size: 14px; margin-right: 5px;"></i>
                                 Cari Ekle
                             </button>
@@ -164,7 +164,7 @@
                                             <div class="row justify-content-center mx-2">
                                                 <button *ngIf="currentAccountUpdate" type="button"
                                                     class="btn btn-info btn-sm " data-bs-toggle="modal"
-                                                    data-bs-target="#updateCurrencyAccountModal"
+                                                    data-bs-target="#updateCurrentAccountModal"
                                                     (click)="getById(currentAccount.id)">
                                                     Güncelle
                                                 </button>
@@ -203,7 +203,7 @@
 </swal>
 
 <!-- cari add -->
-<div class="modal fade" id="addCurrencyAccountModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+<div class="modal fade" id="addCurrentAccountModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -299,7 +299,7 @@
 <!-- cari add -->
 
 <!-- cari excel add -->
-<div class="modal fade" id="addFromExcelCurrencyAccountModal" tabindex="-1" role="dialog"
+<div class="modal fade" id="addFromExcelCurrentAccountModal" tabindex="-1" role="dialog"
     aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -330,7 +330,7 @@
 <!-- cari excel add -->
 
 <!-- cari update -->
-<div class="modal fade" id="updateCurrencyAccountModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+<div class="modal fade" id="updateCurrentAccountModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -400,7 +400,7 @@
                             </div>
 
                             <div class="col-md-3">
-                                <label class="form-check-label mx-1" for="checkboxTrue">Pasif</label>
+                                <label class="form-check-label mx-1" for="checkboxFalse">Pasif</label>
                                 <input class="form-check-input" type="checkbox" value="" id="checkboxFalse"
                                     [(ngModel)]='checkboxUpdateFalse' [ngModelOptions]="{standalone: true}"
                                     (change)="falseCheckboxUpdate()">
